--- a/healthfood.html
+++ b/healthfood.html
@@ -101,16 +101,18 @@
   div.ch-eat-1,
   div.ch-eat-2,
   div.ch-eat-3,
-  span.ch-p {
+  label.ch-p {
     font-size: 28px;
     vertical-align: middle;
+    margin-top: 5px;
 
   }
 
   span.span-ch-eat {
     display: flex;
     align-items: center;
-    /* border: 1px solid #000; */
+    margin-top: 10px;
+
 
   }
 
@@ -148,6 +150,14 @@
     height: 30px;
     margin-left: 5px;
     border-radius: 6px;
+
+  }
+
+  div.search button {
+    border: 3px solid #b1b1b1;
+    margin-left: 5px;
+    border-radius: 5px;
+
   }
 
   @media (min-width: 768px) and (max-width: 991.98px) {
@@ -356,6 +366,7 @@
   }
 
 
+
   /* 第一種 */
   main.main div.threemethod div.eat-one {
 
@@ -391,16 +402,12 @@
     border-radius: 20px;
   }
 
-  /* 第二種 */
-
-
-
-  div.three span.eat2 {
-    margin-right: 20px;
-    margin-left: 0px;
+  .eat-one p.p-1-2 {
     display: inline-block;
+    width: 600px;
   }
 
+  /* 第二種 */
 
   main.main div.threemethod div.eat-two {
     margin: 20px;
@@ -408,6 +415,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 80px;
+    align-items: center;
   }
 
   main.main div.threemethod div.eat-two img {
@@ -426,10 +434,21 @@
     color: rgba(0, 0, 0, 1);
     line-height: 30px;
     background-color: rgba(255, 216, 79, 1);
-    height: 280px;
-    margin: auto 0;
-    width: 100%;
+    height: 100%;
+    /* margin: auto 0; */
+    /* width: 100%; */
+  }
 
+  div.three span.eat2 {
+    margin-right: 20px;
+    margin-left: 0px;
+    display: inline-block;
+  }
+
+
+  .eat-two p.p-2-2 {
+    display: inline-block;
+    width: 600px;
 
   }
 
@@ -443,6 +462,7 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 80px;
+    align-items: center;
   }
 
   main.main div.threemethod div.eat-three img {
@@ -450,6 +470,7 @@
     height: 300px;
     border: 5px solid rgba(255, 166, 41, 1);
     border-radius: 20px;
+
   }
 
   div.eat-three span {
@@ -460,35 +481,41 @@
     color: rgba(0, 0, 0, 1);
     line-height: 30px;
     background-color: rgba(255, 216, 79, 1);
-    height: 350px;
+    height: 100%;
     margin-left: 20px;
+
+  }
+
+
+  div.eat-three p.p-3-2 {
+    display: inline-block;
+    width: 600px;
   }
 
   @media (min-width: 992px) and (max-width: 1199.98px) {
-
-    div.eat-one span,
-    div.eat-one span,
-    div.eat-three span {
-      display: block;
-    }
-
-    div.eat-one span,
-    div.eat-two span,
-    div.eat-three span {
-      margin-top: 20px;
-      height: 100%;
-    }
-
     div.eat-two {
       flex-direction: column-reverse;
       flex-wrap: wrap;
     }
 
+    div.eat-one span,
+    div.eat-two span.eat2,
+    div.eat-three span {
+      margin: auto;
+      width: 80%;
+      /* display: inline-block; */
+      margin-top: 20px;
+      height: 100%;
+    }
+
     div.eat-on img,
     div.eat-two img,
     div.eat-three img {
-      margin: auto
+      margin: auto;
     }
+
+
+
   }
 
 
@@ -779,14 +806,19 @@
     <div class="ch-eat">
 
       <span class="span-ch-eat">
-        <div class="ch-eat-1"><input type="checkbox" class="chose"><span class="ch-p">地中海飲食</span></div>
-        <div class="ch-eat-2"><input type="checkbox" class="chose"><span class="ch-p">211飲食</span></div>
-        <div class="ch-eat-3"><input type="checkbox" class="chose"><span class="ch-p">得舒飲食</span></div>
+        <div class="ch-eat-1"><input type="checkbox" id="ch1" name="ch1" class="chose" /><label class="ch-p"
+            for="ch1">地中海飲食</label></div>
+        <div class="ch-eat-2"><input type="checkbox" id="ch2" name="ch2" class="chose" /><label class="ch-p"
+            for="ch2">211飲食</label></div>
+        <div class="ch-eat-3"><input type="checkbox" id="ch3" name="ch3" class="chose" /><label class="ch-p"
+            for="ch3">得舒飲食</label></div>
       </span>
 
       <div class="search">
-        <p>商品搜尋</p><img src="./image/icon/search.svg" alt="search">
-        <input class="search" type="text">
+        <img src="./image/icon/search.svg" alt="search">
+        <input class="search" type="text"><button>
+          <p>商品搜尋</p>
+        </button>
       </div>
 
     </div>
@@ -915,25 +947,25 @@
           <img src="./image/飲食法/地中海-大圖.jpg" alt="">
           <span>
             <p class="content">地中海飲食</p>
-            <pre>
-                源自1940-1950年代地中海周邊地區，
-                強調攝取大量蔬菜水果，以橄欖油為主要脂肪來源，
-                天然乳製品加上適量的魚、蛋及家禽類，並攝取少量紅肉，
-                已連續5年被《美國新聞與世界報導》
-                （USNews&World Report）評選為整體最佳飲食方法冠軍，
-                同時也是最佳植物飲食和最易遵循飲食排行榜冠軍。</pre>
+            <p class="p-1-2">
+              源自1940-1950年代地中海周邊地區，
+              強調攝取大量蔬菜水果，以橄欖油為主要脂肪來源，
+              天然乳製品加上適量的魚、蛋及家禽類，並攝取少量紅肉，
+              已連續5年被《美國新聞與世界報導》
+              （USNews&World Report）評選為整體最佳飲食方法冠軍，
+              同時也是最佳植物飲食和最易遵循飲食排行榜冠軍。</p>
           </span>
         </div>
 
         <div class="eat-two">
           <span class="eat2">
             <p class="content">「211餐盤飲食法」</p>
-            <pre>
-                是指每餐的蔬菜、全穀類、蛋白質佔餐盤比例2:1:1，
-                佔餐盤一半份量的蔬菜可增加飽足感，
-                同時不壓縮蛋白質的空閰，並選用全穀類，
-                減少食用精緻澱粉，除了作為減脂、減醣的入門飲食外，
-                也能作為運動後營養補充或是有控醣需求的人。</pre>
+            <p class="p-2-2">
+              是指每餐的蔬菜、全穀類、蛋白質佔餐盤比例2:1:1，
+              佔餐盤一半份量的蔬菜可增加飽足感，
+              同時不壓縮蛋白質的空閰，並選用全穀類，
+              減少食用精緻澱粉，除了作為減脂、減醣的入門飲食外，
+              也能作為運動後營養補充或是有控醣需求的人。</p>
           </span>
           <img src="./image/飲食法/211健康餐-大圖.jpg" alt="">
         </div>
@@ -941,16 +973,16 @@
         <div class="eat-three"><img src="./image/飲食法/DASH-大圖.jpg" alt="">
           <span>
             <p class="content">得舒飲食</p>
-            <pre>
-                （Dietary Approaches to Stop Hypertension，DASH）
-                是目前醫學界推崇的一種降血壓的新飲食療法，
-                有別於傳統叫你什麼都不能吃的印象，
-                而是呼籲多吃一些健康且富含營養素的食物。
-                得舒飲食主要提倡「四高」，就是要攝取
-                「高鉀、高鎂、高鈣及高膳食纖維」，最後強調要吃好油，
-                多選擇一些富含不飽和脂肪酸的油脂如堅果種子類、
-                橄欖油、苦茶油、亞麻仁籽油等，盡量減少飽和脂肪，
-                以達到健康舒壓的效果。</pre>
+            <p class="p-3-2">
+              （Dietary Approaches to Stop Hypertension，DASH）
+              是目前醫學界推崇的一種降血壓的新飲食療法，
+              有別於傳統叫你什麼都不能吃的印象，
+              而是呼籲多吃一些健康且富含營養素的食物。
+              得舒飲食主要提倡「四高」，就是要攝取
+              「高鉀、高鎂、高鈣及高膳食纖維」，最後強調要吃好油，
+              多選擇一些富含不飽和脂肪酸的油脂如堅果種子類、
+              橄欖油、苦茶油、亞麻仁籽油等，盡量減少飽和脂肪，
+              以達到健康舒壓的效果。</p>
           </span>
         </div>
 
